k3s/flux/ingress-flux-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-web
  namespace: flux-system
spec:
  ingressClassName: traefik
  rules:
    - host: flux.lab.theoboursy.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flux-operator
                port: { name: http-web }
